fix 5174, city page, edit profile client